--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -1,4 +1,4 @@
-\thesischapter{Background: Traditional Railway Control Systems:}
+\thesischapter{Background: Traditional Railway Control Systems}{Traditional Railway Control Systems}
 The birth of the railways occurred in the 1800s and from that point until the present day they have experienced continual growth, change and development. In the beginning the burden of safety was placed solely on human shoulders and has since been placed on mechanical systems before finally being transferred to electronics systems that are in place guaranteeing safety today. In the following we shall present a brief history of the railway followed by information on our industrial partner Invensys Rail.  Following this general introduction we shall look into specific equipment found on the modern railway and other information needed to understand the domain. Most importantly we shall describe the Westrace interlocking, a modern system charge with guaranteeing safety on the railway, which is produced by Invensys. In the final part of this chapter we shall look at some previous work in this field.
 
 
@@ -404,7 +404,7 @@ is as follows:
 
 \begin{description}
 
-\item[Coils]: A coil represents a value that is both output from the program and stored for later used.  We call the process of computing outputs from inputs and previous outputs the firing of a rung. Graphically, the rungs of a ladder are always laid out so that the coil is the right most entity. Its value is computed from left to right using the input variables and connectives.
+\item[Coils]: A coil represents a value that is both output from the program and stored for later use.  We call the process of computing outputs from inputs and previous outputs the firing of a rung. Graphically, the rungs of a ladder are always laid out so that the coil is the right most entity. Its value is computed from left to right using the input variables and connectives.
 
 \item[Open Contacts]: The entity of the ladder logic diagram used to represent an un-negated variable.
 
