--- a/lit.bib
+++ b/lit.bib
@@ -1403,6 +1403,16 @@
   number = {12-13}
 }
 
+@MISC{MinlogRef,
+  author = {Helmut Schwichtenberg},
+  title = {Minlog Reference Manual},
+  howpublished = {\url{http://www.mathematik.uni-muenchen.de/~logik/minlog/cronfiles/ref.pdf}},
+  year = {2014},
+  note = {Accessed:  23-07-14},
+  owner = {andylawrence},
+  timestamp = {2014.07.23}
+}
+
 @BOOK{SW11,
   title = {Proofs and Computations},
   publisher = {Cambridge University Press},
