--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -1,5 +1,5 @@
 \thesischapter{Extracting Verified Decision Procedures in the Minlog System}{Extracting Verified Decision Procedures in the Minlog System} \label{chapter:dpllminlog}
-In the following chapter we describe how the completeness proofs from chapter \ref{chapter:dpll} are implemented in the Minlog system and how Minlog can be used to extract programs from these proofs.  This begins with the definition of preliminary data types and operations described in chapter \ref{chapter:dpll} and followed by the implementation of the soundness and completeness of the DPLL proof system in Minlog. The program extracted from the completeness is described along with a description of how a unique feature of the Minlog system, namely \emph{non-computational quantifiers} have been used to remove redundant data and computations and obtain a more efficient extracted program. The performance and behaviour of the extracted program is analysed in chapter \ref{chapter:dpllapp}. A detailed overview of the Minlog system can be found in the Minlog Reference Manual \cite{}.
+In the following chapter we describe how the completeness proofs from chapter \ref{chapter:dpll} are implemented in the Minlog system and how Minlog can be used to extract programs from these proofs.  This begins with the definition of preliminary data types and operations described in chapter \ref{chapter:dpll} and followed by the implementation of the soundness and completeness of the DPLL proof system in Minlog. The program extracted from the completeness is described along with a description of how a unique feature of the Minlog system, namely \emph{non-computational quantifiers} have been used to remove redundant data and computations and obtain a more efficient extracted program. The performance and behaviour of the extracted program is analysed in chapter \ref{chapter:dpllapp}. A detailed overview of the Minlog system can be found in the Minlog Reference Manual \cite{MinlogRef}.
 
 \section{Formalising Preliminaries in the Minlog System}
 We have tried to stay faithful to the definition of the fundemental data types described in chapter \ref{} and to this end have defined a number of data types as algebras in Minlog, including the variable,literal, valuation, clause and formula. The variable is defined using the command $\mathbf{add-alg}$ which adds an algebra named "variable " with one constructor "Variable" which takes a natural number and returns a variable.
@@ -28,7 +28,7 @@ Functions in Minlog are defined using program constants which have a type and th
 \subsection*{Sets: Clauses, Valuations and Formulae}
 There is currently no built in data type for sets in the Minlog system. For our work we have implemented sets as lists in the Minlog system, while this is not the most mathematically pure way of implementing these data types it has enabled us to make further effciency improvements. The clauses have been implementated in such a way that the literals contained with in are partitioned into positive and negative literals and then ordered within each of these partitions by variable number. The positive literals occur first followed by the negative and the variables are sorted from low to high numbers. We do not place any partitionings or ordering on either the formulae or the valuations, they are built using unsorted lists.
 
-\begin{lstlisting}[caption = "Definitions of clauses \, formulae and valulations in the Minlog system"]
+\begin{lstlisting}[caption = "Definitions of clauses\, formulae and valulations in the Minlog system"]
 (add-alg "cla"  '( "CC" "list lit => cla"))
 (add-alg "for" '( "CF" "list cla => for"))
 (add-alg "valu" '( "ConsVal" "list lit => valu") )
@@ -49,19 +49,15 @@ In Minlog one defines variable names to have a particular type.  These variable 
 \end{lstlisting}
 
 \subsection*{Set Operations}
-Due to there being no built in library for sets we have defined several operations on sets in Minlog. The  undecidabilty of equality and some limitations of polymorphism in Minlog have caused us to implement specific operations for each data type. While this has made the verification task hard, it has also given us a firmer grip on the extracted programming, allowing us to make such implementation decisons as the ordering of literals in the clause. One piece of future work which would be valuable to the Minlog community even if it is not scientifically valuable would be to come up with a implementation of sets that will allow for program extraction and contains proof tactics that make reasoning about these sets less time consuming. We shall now give a brief overview of some of the set operations we have implemented as part of this formalisation.
-
-
-The CNF formula has no predefined structure which makes the addition and removal of elements straight forward.
+Due to there being no built in library for sets we have defined several operations on sets in Minlog. The  undecidabilty of equality and some limitations of polymorphism in Minlog have caused us to implement specific operations for each data type. While this has made the verification task hard, it has also given us a firmer grip on the extracted programming, allowing us to make such implementation decisons as the ordering of literals in the clause. One piece of future work which would be valuable to the Minlog community even if it is not scientifically valuable would be to come up with a implementation of sets that will allow for program extraction and contains proof tactics that make reasoning about these sets less time consuming. We shall now give a brief overview of some of the set operations we have implemented as part of this formalisation. The CNF formula has no predefined structure which makes the addition and removal of elements straight forward.
 
 \begin{lstlisting}[caption = "Code for the addition and removal of clauses from formulae"]
 (add-program-constant "conccf" (py "cla => for => for") 1)
 (add-computation-rule (pt  "conccf c (CF cs)")
                       (pt  "(CF (c::cs)) "))
 \end{lstlisting}
-The function \texttt{conccf} is used to insert clauses into a formula
 
-
+The function \texttt{conccf} is used to insert clauses into a formula, it has one computation rule which simply adds the clause to the from of the list of clauses contained within the formula. The insertion of literals into clauses is more complicated due to the structure we have decided to implement. Clauses are partitioned into positive and negative literals and then ordered by variable number.
 
 
 \begin{lstlisting}[caption =  "Code used to insert a literal into a clause"]
@@ -91,6 +87,8 @@ The function \texttt{conccf} is used to insert clauses into a formula
                                                  ((Neg v)::(Neg v2)::ls)                                                                        
                                                  ((Neg v2)::(Conclitlitlist (Neg v) ls))])])"))
 \end{lstlisting}
+
+While the function \texttt{conclc}  is most commonly used in the formalisation, the work of adding a literal to the clause is carried out internally by the function \texttt{Conclitlitlist}. The \texttt{Conclitlitlist} function is defined by 5 computational rules that pattern match on both the literal to be added and the structure of the list to which the literal is to be added. In particular the first literal of the list is matched on if there is such a literal, otherwise there is a rule to deal with the empty list. The rules cause the function to recursively search through the list attempting to place the literal in the right partition and in the right place in the order. It also checks that such a literal does not already exist in the list which makes the addition of such a literal to the list redundant.
 
 \subsection*{Models}
 We implement models as a variable of type $literal \to boole$:
