--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -430,7 +430,56 @@ The result of running this satisfiable pigeon hole formula with our SAT algorith
 \texttt{"CsuccessOne([l0][if (l0=Pos(Variable 22)) True [if (l0=Neg(Variable 21)) True [if (l0=Pos(Variable 11)) True (l0=Neg(Variable 12))]]])"}
 \end{center}
 
-\section{The Resolution Proof System in Minlog}
+\section{The Modified DPLL and  Resolution Proof Systems in Minlog}
+The DPLL and Resolution proof systems were modified in order to obtain a proof complexity result during the proof of equivalence between the two systems.
 
+
+
+\begin{lstlisting}
+(add-ids (list (list "resolution" (make-arity (py "for" ) (py "cla") (py "nat")) "algresolution"))
+	'("all f,c2. all c1.  subseteq c1 c2 -> memcf c1 f -> resolution f c2 (sizec c1) " "Sub")
+        '("all f,c1,c2. all l,n,m.  resolution f (inslc l c1) n -> resolution f (inslc (opposite l) c2) m -> resolution f (ConcClause c1 c2) (n + m + 1)" "Res")
+)
+\end{lstlisting}
 
 \section{The Completeness of the Resolution Proof System in Minlog}
+
+\begin{center}
+\texttt{(set-goal  (pf "all f,c. all c0,n. resolution f c n  -> (memcf c0 f -> F) -> resolution (conccf c0 f) c n "))}
+\end{center}
+
+\begin{center}
+(set-goal (pf "all f,c. all c0,l0,n.  resolution f c n -> memcf c0 f -> ex m. m <= n +1 & resolution (conccf(inslc  l0 c0)   (remcf c0 f)) (inslc l0 c) m "))
+\end{center}
+
+\begin{center}
+(set-goal (pf "all f,c,n. resolution f c n -> all ls. c = (CC ls) -> ex m.  derivable (ConsVal (oppositeLiteral ls)) f m"))
+\end{center}
+
+
+\begin{center}
+(set-goal (pf "all f,val,n. derivable val f n -> ex m. m <= n & resolution f (oppositeval val) m"))
+\end{center}
+
+\begin{lstlisting}
+(add-ids (list (list "ressuccess" (make-arity (py "for")) "algressuccess" ))
+
+         '("allnc f.all n.                                                                                                                                           
+                                resolution f (CC (Nil lit)) n  ->                                                                                                    
+                               ressuccess f "  )
+
+               '("allnc  f. all mod.                                                                                                                                 
+                                              all c ( memcf c f ->  ( clausesat mod c (g mod c) )) ->                                                                
+                                        ressuccess f  " )
+)
+\end{lstlisting}
+
+
+\begin{lstlisting}[caption = "Beginning of the Resolution Completeness Proof"]
+(set-goal (pf "all f. WellFormedF f ->  ressuccess f "))
+(assume "f")
+(cases (pt "f"))
+(assume "cs" "csprop" "wellformedprop")
+(inst-with "DPLLSuccess" (pt "cs") (pt "(Nil cla)") (pt "(ConsVal (Nil lit))"))
+\end{lstlisting}
+
